Added specs grid

--- a/index.html
+++ b/index.html
@@ -69,6 +69,55 @@
         </div>
     </section>
 
+    <!-- Technical Specifications Section -->
+    <section id="specs">
+        <div class="container">
+            <h2>Technical Specifications</h2>
+            <div class="specs-grid">
+                <div class="spec-item">
+                    <h3>Engine Type</h3>
+                    <p>286cc liquid-cooled single-cylinder</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Horsepower</h3>
+                    <p>27.3 HP @ 8,500 RPM</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Torque</h3>
+                    <p>19.6 lb-ft @ 6,500 RPM</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Transmission</h3>
+                    <p>6-speed manual</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Fuel Capacity</h3>
+                    <p>3.4 gallons</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Seat Height</h3>
+                    <p>35.2 inches</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Ground Clearance</h3>
+                    <p>10.2 inches</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Weight</h3>
+                    <p>333 lbs (wet)</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Front Suspension</h3>
+                    <p>43mm inverted fork; 10.2 inches travel</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Rear Suspension</h3>
+                    <p>Pro-Link single shock; 10.2 inches travel</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Gallery Section -->
     <section id="gallery">
         <div class="container">
