Added style to specs grid

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="spec-item">
                     <h3>Weight</h3>
-                    <p>333 lbs (wet)</p>
+                    <p>335 lbs</p>
                 </div>
                 <div class="spec-item">
                     <h3>Front Suspension</h3>
@@ -113,6 +113,14 @@
                 <div class="spec-item">
                     <h3>Rear Suspension</h3>
                     <p>Pro-Link single shock; 10.2 inches travel</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Brakes</h3>
+                    <p>Front: 256mm disc; Rear: 220mm disc</p>
+                </div>
+                <div class="spec-item">
+                    <h3>Wheelbase</h3>
+                    <p>57.3 inches</p>
                 </div>
             </div>
         </div>
